correct text-align to footer only

--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -80,7 +80,6 @@ a:active {
 }
 
 .section-header {
-    text-align: var(--section-header-align);
     padding: var(--section-header-padding);
 }
 
